Implemented error span and fixed some attributes

--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,13 @@
   <section id="display">
     <div class="display-bg">
       <div class="display-line">
-        <form class="js-form-consult">
+        <form class="js-form-consult" onsubmit="cancelSubmit(e)">
           <div class="display-img"> <img src="img/credfashion.png"> </div>
           <h1 class="welcome-msg">Digite o seu CPF para realizar a consulta</h1>
           <input type="text" placeholder="" class="js-input-cpf">
-          <button class="button" type="submit">Consultar</button>
+          <span class="input-error is-hidden">CPF inválido</span>
         </form>
+        <button class="button">Consultar</button>
       </div>
     </div>
   </section>
