Included animate css to put a better behaviour in transition between elements

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name=viewport content=width=device-width initial-scale=1 shrink-to-fit=no>
   <title>Consulta CredFashion - Rede Etiqueta Modas</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
+  <link rel="stylesheet" href="animate.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +18,7 @@
   </section>
 
   <section id="display">
-    <div class="display-bg">
+    <div class="display-bg animated fadeIn">
       <div class="display-line">
         <form class="js-form-consult" onsubmit="cancelSubmit(e)">
           <div class="display-img"> <img src="img/credfashion.png"> </div>
